# underwater-image-enhancement

./: .gitignore  PUIE-Unet-test.py  PUIE-Unet.py  README.md  _bootstrap.py  ablation_train_multi_run.py  ablation_train_multi_run_uieb.py  check_bmap.py  eval.py  mbconv-unet.ipynb  measure_underwater.py  net_test.py  plot_remaining.py  pyproject.toml  replot_qual.py  requirements.txt  run_ablation.sh  run_ablation_uieb.sh  test_run.py  train.py  visualize_ablation.py
data/: UWIRdataset.py  data.py  eval_sets.py  options.py  scheduler.py  util.py
logs/: .gitkeep
loss/: __init__.py  losses.py
net/: PUIE-Unet-test.py  PUIE-Unet.py  __init__.py  blocks.py  densenet_unet.py  mamba_unet.py  mambavision_unet.py  mobilenet_unet.py  physics.py  physics_gdcp.py  physics_gupdm.py  registry.py  resnet_unet.py  unet.py
scripts/: __init__.py  precompute_physics.py
scripts/diagnostics/: __init__.py  check_physics_maps.py
scripts/experiments/: __init__.py  ablation_euvp.py  ablation_uieb.py  run_ablation.sh  run_ablation_uieb.sh  run_fast_context_screen.sh
scripts/visualization/: __init__.py  ablation.py  plot_remaining.py  replot_qualitative.py
src/uwir/: __init__.py  config.py  losses.py  metrics.py
src/uwir/cli/: __init__.py  evaluate.py  profile.py  puie_evaluate.py  puie_train.py  train.py
src/uwir/data/: __init__.py  datasets.py  eval_sets.py  factory.py  utils.py
src/uwir/models/: __init__.py  blocks.py  context_unet.py  unet.py  (+6 more)
tests/: conftest.py  test_config_and_registry.py  test_data_compatibility.py  test_metrics_and_physics.py  test_training_smoke.py
(+6 files in other folders)
