[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwir"
version = "0.1.0"
description = "Physics-guided underwater image restoration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "einops>=0.7.0",
    "huggingface-hub>=0.20.0",
    "kornia>=0.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
profile = ["thop>=0.1.1"]
visualization = ["matplotlib>=3.8", "pandas>=2.0", "seaborn>=0.13"]

[project.scripts]
uwir-train = "uwir.cli.train:main"
uwir-evaluate = "uwir.cli.evaluate:main"
uwir-profile = "uwir.cli.profile:main"
uwir-puie-train = "uwir.cli.puie_train:main"
uwir-puie-evaluate = "uwir.cli.puie_evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/uwir/cli/profile.py" = ["SIM115"]
"src/uwir/cli/train.py" = ["SIM115"]

[tool.ruff.format]
line-ending = "lf"
